src/gen/JPoclASTParser.java
// $ANTLR 3.4 C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g 2013-07-15 11:45:44

package gen;

import ast.TypeTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class JPoclASTParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "BLOCK", "BOOLEAN", "CALC", "DOT", "ECHO", "FUNCCALL", "FUNCDECL", "ID", "INT", "NL", "PDECS", "PLUS", "SIGN", "STRUCTEQUAL", "STRUCTVALUES", "WS", "'!'", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'^'", "'bool'", "'if'", "'int'", "'return'", "'struct'", "'void'", "'while'", "'{'", "'||'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ASSIGN=4;
    public static final int BLOCK=5;
    public static final int BOOLEAN=6;
    public static final int CALC=7;
    public static final int DOT=8;
    public static final int ECHO=9;
    public static final int FUNCCALL=10;
    public static final int FUNCDECL=11;
    public static final int ID=12;
    public static final int INT=13;
    public static final int NL=14;
    public static final int PDECS=15;
    public static final int PLUS=16;
    public static final int SIGN=17;
    public static final int STRUCTEQUAL=18;
    public static final int STRUCTVALUES=19;
    public static final int WS=20;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public JPoclASTParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public JPoclASTParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return JPoclASTParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g"; }


    	boolean insideFunctionDecl = false;
    	@Override
      public void reportError(RecognitionException e) {
     	    throw new RuntimeException("Syntax error.\n");
      }


    public static class calc_return extends ParserRuleReturnScope {
        TypeTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "calc"
    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:1: calc : ( stmt )+ -> ^( CALC ( stmt )+ ) ;
    public final JPoclASTParser.calc_return calc() throws RecognitionException {
        JPoclASTParser.calc_return retval = new JPoclASTParser.calc_return();
        retval.start = input.LT(1);


        TypeTree root_0 = null;

        JPoclASTParser.stmt_return stmt1 =null;


        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try {
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:7: ( ( stmt )+ -> ^( CALC ( stmt )+ ) )
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:9: ( stmt )+
            {
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:9: ( stmt )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ECHO||LA1_0==ID||LA1_0==NL||LA1_0==40||LA1_0==43||(LA1_0 >= 45 && LA1_0 <= 46)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==39||LA1_0==41||LA1_0==44) && ((!insideFunctionDecl))) {
                    alt1=1;
                }
                else if ( (LA1_0==42) && ((insideFunctionDecl))) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:9: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_calc84);
            	    stmt1=stmt();

            	    state._fsp--;

            	    stream_stmt.add(stmt1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            // AST REWRITE
            // elements: stmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (TypeTree)adaptor.nil();
            // 36:15: -> ^( CALC ( stmt )+ )
            {
                // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:36:18: ^( CALC ( stmt )+ )
                {
                TypeTree root_1 = (TypeTree)adaptor.nil();
                root_1 = (TypeTree)adaptor.becomeRoot(
                (TypeTree)adaptor.create(CALC, "CALC")
                , root_1);

                if ( !(stream_stmt.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_stmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_stmt.nextTree());

                }
                stream_stmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (TypeTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException re) {
        	reportError(re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "calc"


    public static class stmt_return extends ParserRuleReturnScope {
        TypeTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stmt"
    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:39:1: stmt : ( NL ->| ECHO instr NL -> ^( ECHO instr ) | qualifiedID tk= '=' bexpr0 NL -> ^( ASSIGN[$tk,$tk.text] bexpr0 qualifiedID ) | functionCall | 'if' ^ '(' ! bexpr0 ')' ! stmt | 'while' ^ '(' ! bexpr0 ')' ! stmt | block | structDecl | functionDecl | returnStmt );
    public final JPoclASTParser.stmt_return stmt() throws RecognitionException {
        JPoclASTParser.stmt_return retval = new JPoclASTParser.stmt_return();
        retval.start = input.LT(1);


        TypeTree root_0 = null;

        Token tk=null;
        Token NL2=null;
        Token ECHO3=null;
        Token NL5=null;
        Token NL8=null;
        Token string_literal10=null;
        Token char_literal11=null;
        Token char_literal13=null;
        Token string_literal15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        JPoclASTParser.instr_return instr4 =null;

        JPoclASTParser.qualifiedID_return qualifiedID6 =null;

        JPoclASTParser.bexpr0_return bexpr07 =null;

        JPoclASTParser.functionCall_return functionCall9 =null;

        JPoclASTParser.bexpr0_return bexpr012 =null;

        JPoclASTParser.stmt_return stmt14 =null;

        JPoclASTParser.bexpr0_return bexpr017 =null;

        JPoclASTParser.stmt_return stmt19 =null;

        JPoclASTParser.block_return block20 =null;

        JPoclASTParser.structDecl_return structDecl21 =null;

        JPoclASTParser.functionDecl_return functionDecl22 =null;

        JPoclASTParser.returnStmt_return returnStmt23 =null;


        TypeTree tk_tree=null;
        TypeTree NL2_tree=null;
        TypeTree ECHO3_tree=null;
        TypeTree NL5_tree=null;
        TypeTree NL8_tree=null;
        TypeTree string_literal10_tree=null;
        TypeTree char_literal11_tree=null;
        TypeTree char_literal13_tree=null;
        TypeTree string_literal15_tree=null;
        TypeTree char_literal16_tree=null;
        TypeTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_ECHO=new RewriteRuleTokenStream(adaptor,"token ECHO");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_qualifiedID=new RewriteRuleSubtreeStream(adaptor,"rule qualifiedID");
        RewriteRuleSubtreeStream stream_bexpr0=new RewriteRuleSubtreeStream(adaptor,"rule bexpr0");
        RewriteRuleSubtreeStream stream_instr=new RewriteRuleSubtreeStream(adaptor,"rule instr");
        try {
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:39:6: ( NL ->| ECHO instr NL -> ^( ECHO instr ) | qualifiedID tk= '=' bexpr0 NL -> ^( ASSIGN[$tk,$tk.text] bexpr0 qualifiedID ) | functionCall | 'if' ^ '(' ! bexpr0 ')' ! stmt | 'while' ^ '(' ! bexpr0 ')' ! stmt | block | structDecl | functionDecl | returnStmt )
            int alt2=10;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==NL) ) {
                alt2=1;
            }
            else if ( (LA2_0==ECHO) ) {
                alt2=2;
            }
            else if ( (LA2_0==ID) ) {
                int LA2_3 = input.LA(2);

                if ( (LA2_3==DOT||LA2_3==34) ) {
                    alt2=3;
                }
                else if ( (LA2_3==24) ) {
                    alt2=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==40) ) {
                alt2=5;
            }
            else if ( (LA2_0==45) ) {
                alt2=6;
            }
            else if ( (LA2_0==46) ) {
                alt2=7;
            }
            else if ( (LA2_0==43) ) {
                int LA2_7 = input.LA(2);

                if ( (LA2_7==ID) ) {
                    int LA2_12 = input.LA(3);

                    if ( (LA2_12==46) ) {
                        alt2=8;
                    }
                    else if ( (LA2_12==ID) && ((!insideFunctionDecl))) {
                        alt2=9;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 12, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 7, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==39||LA2_0==41||LA2_0==44) && ((!insideFunctionDecl))) {
                alt2=9;
            }
            else if ( (LA2_0==42) && ((insideFunctionDecl))) {
                alt2=10;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:39:8: NL
                    {
                    NL2=(Token)match(input,NL,FOLLOW_NL_in_stmt107);  
                    stream_NL.add(NL2);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (TypeTree)adaptor.nil();
                    // 39:11: ->
                    {
                        root_0 = null;
                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:40:6: ECHO instr NL
                    {
                    ECHO3=(Token)match(input,ECHO,FOLLOW_ECHO_in_stmt116);  
                    stream_ECHO.add(ECHO3);


                    pushFollow(FOLLOW_instr_in_stmt118);
                    instr4=instr();

                    state._fsp--;

                    stream_instr.add(instr4.getTree());

                    NL5=(Token)match(input,NL,FOLLOW_NL_in_stmt120);  
                    stream_NL.add(NL5);


                    // AST REWRITE
                    // elements: instr, ECHO
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (TypeTree)adaptor.nil();
                    // 40:20: -> ^( ECHO instr )
                    {
                        // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:40:23: ^( ECHO instr )
                        {
                        TypeTree root_1 = (TypeTree)adaptor.nil();
                        root_1 = (TypeTree)adaptor.becomeRoot(
                        stream_ECHO.nextNode()
                        , root_1);

                        adaptor.addChild(root_1, stream_instr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:41:6: qualifiedID tk= '=' bexpr0 NL
                    {
                    pushFollow(FOLLOW_qualifiedID_in_stmt135);
                    qualifiedID6=qualifiedID();

                    state._fsp--;

                    stream_qualifiedID.add(qualifiedID6.getTree());

                    tk=(Token)match(input,34,FOLLOW_34_in_stmt139);  
                    stream_34.add(tk);


                    pushFollow(FOLLOW_bexpr0_in_stmt141);
                    bexpr07=bexpr0();

                    state._fsp--;

                    stream_bexpr0.add(bexpr07.getTree());

                    NL8=(Token)match(input,NL,FOLLOW_NL_in_stmt143);  
                    stream_NL.add(NL8);


                    // AST REWRITE
                    // elements: bexpr0, qualifiedID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (TypeTree)adaptor.nil();
                    // 41:35: -> ^( ASSIGN[$tk,$tk.text] bexpr0 qualifiedID )
                    {
                        // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:41:38: ^( ASSIGN[$tk,$tk.text] bexpr0 qualifiedID )
                        {
                        TypeTree root_1 = (TypeTree)adaptor.nil();
                        root_1 = (TypeTree)adaptor.becomeRoot(
                        (TypeTree)adaptor.create(ASSIGN, tk, (tk!=null?tk.getText():null))
                        , root_1);

                        adaptor.addChild(root_1, stream_bexpr0.nextTree());

                        adaptor.addChild(root_1, stream_qualifiedID.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 4 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:42:6: functionCall
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    pushFollow(FOLLOW_functionCall_in_stmt161);
                    functionCall9=functionCall();

                    state._fsp--;

                    adaptor.addChild(root_0, functionCall9.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:43:6: 'if' ^ '(' ! bexpr0 ')' ! stmt
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    string_literal10=(Token)match(input,40,FOLLOW_40_in_stmt171); 
                    string_literal10_tree = 
                    (TypeTree)adaptor.create(string_literal10)
                    ;
                    root_0 = (TypeTree)adaptor.becomeRoot(string_literal10_tree, root_0);


                    char_literal11=(Token)match(input,24,FOLLOW_24_in_stmt174); 

                    pushFollow(FOLLOW_bexpr0_in_stmt177);
                    bexpr012=bexpr0();

                    state._fsp--;

                    adaptor.addChild(root_0, bexpr012.getTree());

                    char_literal13=(Token)match(input,25,FOLLOW_25_in_stmt179); 

                    pushFollow(FOLLOW_stmt_in_stmt182);
                    stmt14=stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, stmt14.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:44:6: 'while' ^ '(' ! bexpr0 ')' ! stmt
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    string_literal15=(Token)match(input,45,FOLLOW_45_in_stmt189); 
                    string_literal15_tree = 
                    (TypeTree)adaptor.create(string_literal15)
                    ;
                    root_0 = (TypeTree)adaptor.becomeRoot(string_literal15_tree, root_0);


                    char_literal16=(Token)match(input,24,FOLLOW_24_in_stmt192); 

                    pushFollow(FOLLOW_bexpr0_in_stmt195);
                    bexpr017=bexpr0();

                    state._fsp--;

                    adaptor.addChild(root_0, bexpr017.getTree());

                    char_literal18=(Token)match(input,25,FOLLOW_25_in_stmt197); 

                    pushFollow(FOLLOW_stmt_in_stmt200);
                    stmt19=stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, stmt19.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:45:6: block
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    pushFollow(FOLLOW_block_in_stmt207);
                    block20=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block20.getTree());

                    }
                    break;
                case 8 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:46:6: structDecl
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    pushFollow(FOLLOW_structDecl_in_stmt214);
                    structDecl21=structDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, structDecl21.getTree());

                    }
                    break;
                case 9 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:47:6: functionDecl
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    pushFollow(FOLLOW_functionDecl_in_stmt221);
                    functionDecl22=functionDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, functionDecl22.getTree());

                    }
                    break;
                case 10 :
                    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:48:6: returnStmt
                    {
                    root_0 = (TypeTree)adaptor.nil();


                    pushFollow(FOLLOW_returnStmt_in_stmt228);
                    returnStmt23=returnStmt();

                    state._fsp--;

                    adaptor.addChild(root_0, returnStmt23.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (TypeTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException re) {
        	reportError(re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stmt"


    public static class block_return extends ParserRuleReturnScope {
        TypeTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:1: block : tk= '{' ( stmt )+ '}' NL -> ^( BLOCK[$tk,$tk.text] ( stmt )+ ) ;
    public final JPoclASTParser.block_return block() throws RecognitionException {
        JPoclASTParser.block_return retval = new JPoclASTParser.block_return();
        retval.start = input.LT(1);


        TypeTree root_0 = null;

        Token tk=null;
        Token char_literal25=null;
        Token NL26=null;
        JPoclASTParser.stmt_return stmt24 =null;


        TypeTree tk_tree=null;
        TypeTree char_literal25_tree=null;
        TypeTree NL26_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try {
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:7: (tk= '{' ( stmt )+ '}' NL -> ^( BLOCK[$tk,$tk.text] ( stmt )+ ) )
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:9: tk= '{' ( stmt )+ '}' NL
            {
            tk=(Token)match(input,46,FOLLOW_46_in_block242);  
            stream_46.add(tk);


            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:16: ( stmt )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ECHO||LA3_0==ID||LA3_0==NL||LA3_0==40||LA3_0==43||(LA3_0 >= 45 && LA3_0 <= 46)) ) {
                    alt3=1;
                }
                else if ( (LA3_0==39||LA3_0==41||LA3_0==44) && ((!insideFunctionDecl))) {
                    alt3=1;
                }
                else if ( (LA3_0==42) && ((insideFunctionDecl))) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:16: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_block244);
            	    stmt24=stmt();

            	    state._fsp--;

            	    stream_stmt.add(stmt24.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            char_literal25=(Token)match(input,48,FOLLOW_48_in_block247);  
            stream_48.add(char_literal25);


            NL26=(Token)match(input,NL,FOLLOW_NL_in_block249);  
            stream_NL.add(NL26);


            // AST REWRITE
            // elements: stmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (TypeTree)adaptor.nil();
            // 51:29: -> ^( BLOCK[$tk,$tk.text] ( stmt )+ )
            {
                // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:51:32: ^( BLOCK[$tk,$tk.text] ( stmt )+ )
                {
                TypeTree root_1 = (TypeTree)adaptor.nil();
                root_1 = (TypeTree)adaptor.becomeRoot(
                (TypeTree)adaptor.create(BLOCK, tk, (tk!=null?tk.getText():null))
                , root_1);

                if ( !(stream_stmt.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_stmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_stmt.nextTree());

                }
                stream_stmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (TypeTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException re) {
        	reportError(re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class functionDecl_return extends ParserRuleReturnScope {
        TypeTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "functionDecl"
    // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:53:1: functionDecl :{...}? => returnFunctionDecl ID '(' ( parametersDecl )? ')' '{' ( stmt )* '}' NL -> ^( FUNCDECL returnFunctionDecl ID ( parametersDecl )? ( stmt )* ) ;
    public final JPoclASTParser.functionDecl_return functionDecl() throws RecognitionException {
        JPoclASTParser.functionDecl_return retval = new JPoclASTParser.functionDecl_return();
        retval.start = input.LT(1);


        TypeTree root_0 = null;

        Token ID28=null;
        Token char_literal29=null;
        Token char_literal31=null;
        Token char_literal32=null;
        Token char_literal34=null;
        Token NL35=null;
        JPoclASTParser.returnFunctionDecl_return returnFunctionDecl27 =null;

        JPoclASTParser.parametersDecl_return parametersDecl30 =null;

        JPoclASTParser.stmt_return stmt33 =null;


        TypeTree ID28_tree=null;
        TypeTree char_literal29_tree=null;
        TypeTree char_literal31_tree=null;
        TypeTree char_literal32_tree=null;
        TypeTree char_literal34_tree=null;
        TypeTree NL35_tree=null;
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleSubtreeStream stream_parametersDecl=new RewriteRuleSubtreeStream(adaptor,"rule parametersDecl");
        RewriteRuleSubtreeStream stream_returnFunctionDecl=new RewriteRuleSubtreeStream(adaptor,"rule returnFunctionDecl");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try {
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:53:13: ({...}? => returnFunctionDecl ID '(' ( parametersDecl )? ')' '{' ( stmt )* '}' NL -> ^( FUNCDECL returnFunctionDecl ID ( parametersDecl )? ( stmt )* ) )
            // C:\\Users\\pc\\Desktop\\IPL\\ew\\JPocl\\JPoclAST.g:53:15: {...}? => returnFunctionDecl ID '(' ( parametersDecl )? ')' '{' ( stmt )* '}' NL
            {
            if ( !((!insideFunctionDecl)) ) {
                throw new FailedPredicateException(input, "functionDecl", "!insideFunctionDecl");
            }

            insideFunctionDecl = true;

            pushFollow(FOLLOW_returnFunctionDecl_in_functionDecl288);
            returnFunctionDecl27=returnFunctionDecl();

            state._fsp--;

            stream_returnFunctionDecl.add(returnFunctionDecl27.getTree());
